--- a/Forevis/index.html
+++ b/Forevis/index.html
@@ -17,9 +17,9 @@
 <nav>
   <ul>
     <li><a href="index.html">Inicio</a></li>
-    <li><a href="destinos.html">Destinos</a></li>
-    <li><a href="forms.html">Novos funcionários</a></li>
-    <li><a href="abertura_chamados.html">Novo chamado</a></li>
+    <li><a href="pages/destinos.html">Destinos</a></li>
+    <li><a href="pages/forms.html">Novos funcionários</a></li>
+    <li><a href="pages/abertura_chamados.html">Novo chamado</a></li>
   </ul>
 </nav>
 <div align="center">
