--- a/pages/forms.html
+++ b/pages/forms.html
@@ -40,12 +40,12 @@
         </div>
         <div>
             <label>
-                TELEFONE PARA CONTATO: <input type="text" placeholder="ex.: 0000-0000">
+                TELEFONE PARA CONTATO: <input type="number" placeholder="ex.: 0000-0000">
             </label>
         </div>
         <div>
             <label>
-                ENDEREÇO: <input type="number" placeholder="seu endereço">
+                ENDEREÇO: <input type="text" placeholder="seu endereço">
             </label>
         </div>
         <div>
