--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>FOREVIS CORP.</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -15,16 +15,28 @@
     <a href="#"><img src="img/0f0e12f448578ebfb83c3328f9d8b4ad.jpg"></a>
 </div>
 <nav>
-  <ul>
-    <li><a href="index.html">Inicio</a></li>
-    <li><a href="pages/destinos.html">Destinos</a></li>
-    <li><a href="pages/forms.html">Novos funcionários</a></li>
-    <li><a href="pages/abertura_chamados.html">Novo chamado</a></li>
-  </ul>
+    <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="../ForevisCorp/pages/destinos.html">Destinos</a></li>
+        <li><a href="../ForevisCorp/pages/forms.html">Novos funcionários</a></li>
+        <li><a href="../ForevisCorp/pages/abertura_chamados.html">Novo chamado</a></li>
+        <li><a href="../ForevisCorp/pages/itinerario.html">Itinerário</a></li>
+    </ul>
 </nav>
 <div align="center">
 <h1 class="h1">FOREVIS CORP.</h1>
-<h3 class="h1">Sempre com você!</h3>
+<h3 class="">Sempre com você!</h3>
+<h4> A forevis Corp tem como seus principais objetivos garantir uma viagem confortável e segura,  sempre prezando por um serviço de qualidade!</h4>
+<h3 class="h1">Atuando nas cidades de Natal e Nova Cruz</h3>
+    <img src="img/IMG-20201207-WA0005.jpg" alt="">
+
+</div>
+<div class="footer">
+    <h1 class="centro">Quer entrar em contato conosco?</h1>
+    <ul>NÚMERO: (84) 00000-0000 ou (84) 99999-9999</ul>
+    <ul>E-mail: foreviscorp@email.com</ul>
+    <ul>End.: R. Cícero do Ramos, Centro, Nº22 Nova Cruz - RN
+        CNPJ: 08.324.808/0001-36</ul>
 </div>
 </body>
 </html>
