--- a/pages/abertura_chamados.html
+++ b/pages/abertura_chamados.html
@@ -20,6 +20,7 @@
         <li><a href="destinos.html">Destinos</a></li>
         <li><a href="forms.html">Novos funcionários</a></li>
         <li><a href="abertura_chamados.html">Novo chamado</a></li>
+        <li><a href="itinerario.html">Itinerário</a></li>
     </ul>
 </nav>
 <div align="center">
