--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -20,13 +20,18 @@
         <li><a href="destinos.html">Destinos</a></li>
         <li><a href="forms.html">Novos funcionários</a></li>
         <li><a href="abertura_chamados.html">Novo chamado</a></li>
+        <li><a href="itinerario.html">Itinerário</a></li>
     </ul>
 </nav>
+<div align="center">
+    <a href="forms.html">Fazer reserva</a> <br><br>
+</div>
 <table class="">
 
     <tr >
         <th>De Natal para Nova Cruz</th>
         <th>De Nova Cruz para Natal</th>
+
     </tr>
 
     <tr >
@@ -42,6 +47,10 @@
     <tr >
         <th>Preços: R$30.00 e R$35.00</th>
         <th>Preços: R$30.00 e R$35.00</th>
+    </tr>
+    <tr >
+        <th>wi-fi: Não</th>
+        <th>wi-fi: Sim</th>
     </tr>
 
 </table>
