--- a/pages/forms.html
+++ b/pages/forms.html
@@ -14,14 +14,17 @@
 <div class="logo">
     <a href="#"><img src="../img/0f0e12f448578ebfb83c3328f9d8b4ad.jpg"></a>
 </div>
+
 <nav>
     <ul>
         <li><a href="../index.html">Inicio</a></li>
         <li><a href="destinos.html">Destinos</a></li>
         <li><a href="forms.html">Novos funcionários</a></li>
         <li><a href="abertura_chamados.html">Novo chamado</a></li>
+        <li><a href="itinerario.html">Itinerário</a></li>
     </ul>
 </nav>
+
 <div align="center">
     <h1>Contratação de funcionários </h1>
     <h2>Informe seus dados abaixo:</h2>
